psp-migration-mpol/add-runtimeClassName/.kyverno-test/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-pod
spec:
  containers: [{name: app, image: busybox:1.36}]
