psp-migration-mpol/add-runtimeClassName/.kyverno-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: runtimeclass-exception-pod
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: add-runtimeclassname
    kind: MutatingPolicy
  matchConditions:
  - name: exact-resource
    expression: object.metadata.namespace == 'default' && object.metadata.name == 'exception-pod'
