psp-migration-mpol/add-runtimeClassName/.kyverno-test/patchedResource1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: pod01
  namespace: add-runtimeclassname
spec:
  automountServiceAccountToken: false
  runtimeClassName: prodclass
  containers:
  - name: busybox
    image: somedummybusyboximage:1.1.0
  - name: nginx
    image: somedummynginximage:1.1.0
